--- a/index.html
+++ b/index.html
@@ -11,17 +11,28 @@
     <h1>Stock Purchase Profit and Loss</h1>
 
     <main>
-        <label for="initial-price"> Initial Price <input required type="number" id="initial-price" placeholder="Enter initial price here">  </label>
+        <label for="initial-price"> Initial Price: <input required type="number" id="initial-price" placeholder="Enter initial price here">  </label>
 
-        <label for="stocks-quantity"> Quantity of Stocks <input required type="number" id="stocks-quantity" placeholder="Enter the number of stocks bought "> </label>
-        
-        <label for="current-price" > Current Price <input required type="number" id="current-price" placeholder="Enter the current price of the stocks"> </label>
+        <label for="stocks-quantity"> Quantity of Stocks: <input required type="number" id="stocks-quantity" placeholder="Enter the number of stocks bought "> </label>
+
+        <label for="current-price" > Current Price: <input required type="number" id="current-price" placeholder="Enter the current price of the stocks"> </label>
 
         <button id="show-btn" > Tell me! </button>
 
         <div id="output-box"></div>
 
     </main>
+
+    <footer>
+
+        <p class="footer-head">Bharat singh</p>
+         <a class="social-link" href="https://github.com/bharats9768/">Github</a>
+
+         <a class="social-link" href="https://www.linkedin.com/in/bharat-singh-ba0245222/">Linkedin</a>
+
+         <a class="social-link" href="https://twitter.com/bharat50576866">Twitter</a>
+
+    </footer>
 
 
 
